--- a/ophthalmology/notebooks/medmnist_exploration.ipynb
+++ b/ophthalmology/notebooks/medmnist_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5bdc1164",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import medmnist\n",
     "import matplotlib.pyplot as plt\n",
     "from torchvision import transforms\n",
-    "from ophthalmology.data.modules import RetinaMNIST"
+    "from ophthalmology.data.modules import RetinaMNIST\n",
+    "import torch"
    ]
   },
   {
@@ -63,23 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "f5abec81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<PIL.Image.Image image mode=RGB size=28x28 at 0x7FF8DA26C0A0>, array([0]))"
+       "array([0])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0]"
+    "data[0][1]"
    ]
   },
   {
